# rna_map

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  build_cli_opts.py  environment.yml  output.csv  pyproject.toml  pytest.ini  requirements.txt  rna.ps  run_docker.py  setup.py  update_run_options.py
.github/workflows/: ci.yml  docker_build.yml  docker_linux_build.yml
docker/: DockerDevfile  Dockerfile
dreem/: BitVector.py  BitVector_Functions.py  BitVector_Outputs.py  args.py  bit_vector.py  cli.py  cli_opts.py  exception.py  external_cmd.py  fastq.py  logger.py  mapping.py  mutation_histogram.py  parameters.py  plot.py  run.py  run_docker.py  run_dreem.py  run_multi.py  sam.py  settings.py  testing.py  util.py
dreem/resources/: bowtie2.args  bowtie2_args.csv  cli_opts.yml  default.yml  logo.txt  params_schema.json
rna_map/: bit_vector.py  cli.py  cli_opts.py  exception.py  external_cmd.py  logger.py  mapping.py  mutation_histogram.py  parameters.py  run.py  sam.py  settings.py  util.py
rna_map/resources/: bowtie2_args.csv  cli_opts.yml  default.yml  params_schema.json  phred_ascii.txt
rna_map/resources/presets/: barcoded-library-large.yml  barcoded-library.yml
scripts/: build_cli_opts.py  build_schema.py
test/: test_bit_vector.py  test_cli.py  test_external_cmd.py  test_histogram.py  test_logging.py  test_mapping.py  test_mutation_histogram.py  test_parameters.py  test_run.py  test_sam.py
test/resources/: aligned.sam  changed_params.yml  default.yml  few.yml  invalid.yml  test.yml
test/resources/case_1/output/BitVector_Files/: mttr-6-alt-h3_1_134_pop_avg.html  mttr-6-alt-h3_bitvectors.txt  mutation_histos.p
test/resources/case_1/output/Mapping_Files/: aligned.sam
test/resources/case_unit/: test.csv  test_mate1.fastq  test_mate2.fastq
test/resources/test_fastas/: blank_line.fasta  incorrect_format.fasta  incorrect_sequence.fasta  is_rna.fasta  space_between_carrot.fasta
tests/: test_histogram.py
